# auditRag

./: .gitignore  README.md  auditrag.example.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
auditrag/: __init__.py  answer.py  api.py  chunk_store.py  cli.py  config.py  embeddings.py  ingest.py  lexical.py  llm.py  models.py  prompts.py  report.py  retrieval.py  vector_store.py  verify.py
auditrag/web/: index.html
tests/: __init__.py  conftest.py  test_answer.py  test_api.py  test_ingest.py  test_report.py  test_retrieval.py  test_verify.py
