[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auditrag"
version = "0.1.0"
description = "RAG answers you can actually verify: sentence-level citations, faithfulness checks, and exportable evidence reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aryan Sharma" }]
keywords = ["rag", "retrieval", "citations", "llm", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.5.3",
    "openai>=1.30",
    "pydantic>=2.5",
    "pypdf>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
auditrag = "auditrag.cli:main"

[project.urls]
Homepage = "https://github.com/aryansharma/auditrag"

[tool.setuptools.packages.find]
include = ["auditrag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
