[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auditrag"
version = "0.1.0"
description = "RAG answers you can actually verify: sentence-level citations, faithfulness checks, and exportable evidence reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aryan Sharma" }]
keywords = ["rag", "retrieval", "citations", "llm", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.5.3",
    "fastapi>=0.110",
    "fpdf2>=2.7",
    "openai>=1.30",
    "pydantic>=2.5",
    "pypdf>=4.0",
    "rank-bm25>=0.2.2",
    "PyYAML>=6.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
auditrag = "auditrag.cli:main"

[project.urls]
Homepage = "https://github.com/aryansharma/auditrag"

[tool.setuptools.packages.find]
include = ["auditrag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
